# graphic_calculator

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
.extra/doxygen/: doxyfile
backend/: temp_help.h
backend/Math_calc/: domain_segments.cpp  domain_segments.h  function_crosses.h  function_extremes.h  function_roots.cpp  function_roots.h  math_base.h
backend/Math_func/: expose_func_str.cpp  expose_func_str.h  function.cpp  function.h  function_validation.cpp
backend/utility/: constants.h  utilities.h
frontend/Graph_lib/: Shapes.cpp  Shapes.h  Widgets.h  Window.h
frontend/Graphix_calc/: Axis.cpp  Axis.h  Bothput_box.h  Function_box.h  Graphix.cpp  Graphix.h  Numbed_button.h  Segmented_Graphix.h  Segmented_graphix.cpp
frontend/Graphix_window/: Graphix_window.h  Graphix_window_callbacks.cpp
frontend/graphix_window/: Graphix_window_updaters.cpp
frontend/utility/: constants.h  utilities.h
